storing background color

--- a/dividing-lines/beamerthemedividing-lines.sty
+++ b/dividing-lines/beamerthemedividing-lines.sty
@@ -72,7 +72,8 @@
 
 %% beamer configuration
 %% -----------------------------------------------------------------------------
-\setbeamercolor{background canvas}{bg=btdl@color@primary!1!}
+\colorlet{btdl@color@background}{btdl@color@primary!1!}
+\setbeamercolor{background canvas}{bg=btdl@color@background}
 
 % General
 \setbeamercolor{normal text}{fg=btdl@color@btext}
