--- a/dividing-lines/example.tex
+++ b/dividing-lines/example.tex
@@ -11,6 +11,7 @@
 \title{Example Presentation}
 \subtitle{This is madness}
 \institute{Cute-Dispute-Institute \(\circ\) University Ulm}
+\license{\ccbysa}
 
 \date{14, August 2020}
 
