polishing png and preview generation

--- a/colorful-dream/example.tex
+++ b/colorful-dream/example.tex
@@ -22,7 +22,7 @@
 
 % tikz code is possible as well!
 % TODO: you may want to change this if you do not have downloaded the image
-\titleimage{\includegraphics{../exampletitleimage}}
+\titleimage{\includegraphics{exampletitleimage}}
 
 % just an example command
 \newcommand\twosplit[3][t]{%
@@ -37,8 +37,7 @@
 }
 
 \usepackage[backend=bibtex8,style=alphabetic]{biblatex}
-\addbibresource{../example.bib}
-
+\addbibresource{example.bib}
 \begin{document}
 
 \begin{frame}[c]{The table of contents}
@@ -71,7 +70,7 @@
         \item Zu Beginn gilt es einige Begriffe zu klären: \begin{description}[Elementaroperation]
             \item[Prozess] Die Ausführung der Schritte eines Algorithmus
             \item[Prozessor] Der Ausführende (Mensch, Computer, \ldots)
-            \item[Elementaroperation] Eine einzelne, eindeutige Handlung. 
+            \item[Elementaroperation] Eine einzelne, eindeutige Handlung.
         \end{description}
         \item Ein Algorithmus besitzt einige Eigenschaften: \begin{description}[Ausführbarkeit]
             \item[Ausführbarkeit] Die Anleitung muss ausführ- und reproduzierbar sein.
