--- a/dividing-lines/example.tex
+++ b/dividing-lines/example.tex
@@ -33,8 +33,7 @@
 }
 
 \usepackage[backend=bibtex8,style=alphabetic]{biblatex}
-\addbibresource{../example.bib}
-
+\addbibresource{example.bib}
 \begin{document}
 
 \section{Theoretische Grundlagen}
