--- a/lucy/example.tex
+++ b/lucy/example.tex
@@ -28,8 +28,7 @@
 }
 
 \usepackage[backend=bibtex8,style=alphabetic]{biblatex}
-\addbibresource{../example.bib}
-
+\addbibresource{example.bib}
 \begin{document}
 
 \begin{frame}[c]
