--- a/fragment/example.tex
+++ b/fragment/example.tex
@@ -30,8 +30,7 @@
 }
 
 \usepackage[backend=bibtex8,style=alphabetic]{biblatex}
-\addbibresource{../example.bib}
-
+\addbibresource{example.bib}
 % customize section-split in the toc at each section
 \SectionLeft{1-2}\SectionRight{3-4}
 
@@ -64,7 +63,7 @@
         \item Zu Beginn gilt es einige Begriffe zu klären: \begin{description}[Elementaroperation]
             \item[Prozess] Die Ausführung der Schritte eines Algorithmus
             \item[Prozessor] Der Ausführende (Mensch, Computer, \ldots)
-            \item[Elementaroperation] Eine einzelne, eindeutige Handlung. 
+            \item[Elementaroperation] Eine einzelne, eindeutige Handlung.
         \end{description}
         \item Ein Algorithmus besitzt einige Eigenschaften: \begin{description}[Ausführbarkeit]
             \item[Ausführbarkeit] Die Anleitung muss ausführ- und reproduzierbar sein.
